welcome.lessons.welcome.bat.bool1.SleepIn.scala.code
// Le paramètre weekday est vrai si nous sommes un jour de semaine, et le paramètre vacation est vrai si nous sommes en vacances. 
// Nous pouvons dormir ce matin s'il ne s'agit pas d'un jour de semaine ou si nous sommes en vacances. 
// Retournez vrai si nous pouvons faire la grasse matinée.


def sleepIn(weekday:Boolean, vacation:Boolean): Boolean = {

	if(!weekday || vacation)
		return true;
}